@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.123 2005/04/07 15:37:13 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.124 2005/04/27 10:00:18 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -229,6 +229,13 @@ PH/37 Exim used to check for duplicate addresses in the middle of routing, on
       For deliveries to pipes, files, and autoreplies, the duplicate checking
       still happens during the routing process, since they are not going to be
       routed further.
+
+PH/38 Installed a patch from Ian Freislich, with the agreement of Tom Kistner.
+      It corrects a timeout issue with spamd. This is Ian's comment: "The
+      background is that sometimes spamd either never reads data from a
+      connection it has accepted, or it never writes response data. The exiscan
+      spam.[ch] uses a 3600 second timeout on spamd socket reads, further, it
+      blindly assumes that writes won't block so it may never time out."
 
 
 A note about Exim versions 4.44 and 4.50
